double scroll on rtu-tree in web-client fixed

--- a/Client/WebClient/src/app/components/ft-rtu-tree/ft-rtu-tree.component.css
+++ b/Client/WebClient/src/app/components/ft-rtu-tree/ft-rtu-tree.component.css
@@ -1,6 +1,6 @@
 .component-container {
   margin: 0px 10px;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .rtu-cycle {
